Refactored using css stylesheet

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
 <head>
   <title>Getting Started</title>
   <link rel="stylesheet" type="text/css" href="./semantic.css">
-  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./styles.css"> -->
 </head>
 
 <body>
-  <div id="root">
+  <div id="navSearch">
   </div>
   <script src="bundle.js"></script>
 </body>
