--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Getting Started</title>
   <link rel="stylesheet" type="text/css" href="./semantic.css">
-  <!-- <link rel="stylesheet" type="text/css" href="./styles.css"> -->
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
 <body>
